# GameMath

./: CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
common/: infinity.c  math_private.h  s_rint.h  s_round.h  s_signgam.c
double/: e_acos.c  e_acosh.c  e_asin.c  e_atan2.c  e_atanh.c  e_cosh.c  e_exp.c  e_fmod.c  e_gamma.c  e_gamma_r.c  e_hypot.c  e_j0.c  e_lgamma.c  e_lgamma_r.c  e_log.c  e_log10.c  e_log2.c  e_pow.c  e_rem_pio2.c  e_remainder.c  e_scalb.c  e_sinh.c  e_sqrt.c  k_cos.c  k_exp.c  k_rem_pio2.c  k_sin.c  k_tan.c  s_asinh.c  s_atan.c  s_cbrt.c  s_ceil.c  s_copysign.c  s_cos.c  s_erf.c  s_exp2.c  s_expm1.c  s_fabs.c  s_finite.c  s_floor.c  (+25 more)
float/: e_acosf.c  e_acoshf.c  e_asinf.c  e_atan2f.c  e_atanhf.c  e_coshf.c  e_expf.c  e_fmodf.c  e_gammaf.c  e_gammaf_r.c  e_hypotf.c  e_j0f.c  e_j1f.c  e_jnf.c  e_lgammaf.c  e_lgammaf_r.c  e_log10f.c  e_log2f.c  e_logf.c  e_powf.c  e_rem_pio2f.c  e_remainderf.c  e_scalbf.c  e_sinhf.c  e_sqrtf.c  k_cosf.c  k_expf.c  k_rem_pio2f.c  k_sinf.c  k_tanf.c  s_asinhf.c  s_atanf.c  s_cbrtf.c  s_ceilf.c  s_copysignf.c  s_cosf.c  s_erff.c  s_exp2f.c  s_expm1f.c  s_fabsf.c  (+28 more)
include/: gmath.h
tests/: CMakeLists.txt  test_lrintf_intrin.c
